# portfolio_optimizer

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
data/: GAZP.ME.csv  LKOH.ME.csv  MTSS.ME.csv  PLZL.ME.csv  SBER.ME.csv  gazp_me.csv  lkoh_me.csv  mtss_me.csv  plzl_me.csv  sber_me.csv
pyfinopt/: data.py  optimizers.py
