[tool.poetry]
name = "pyfinopt"
version = "0.1.0"
description = ""
authors = ["danyanyam <dvbuchko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
ipykernel = "^6.9.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
